<resources>
    <string name="app_name">PubbsAdminApp</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="credential">Credentials</string>
    <string name="mobile_no">Mobile number</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pubbs">PUBBS</string>
    <string name="sharedPreferences">pubbs</string>
    <string name="manage_operator">Manage Operator</string>
    <string name="add_operator">Add Operator</string>
    <string name="organisation">Organisation</string>
    <string name="full_name">Full Name of the Owner</string>
    <string name="email">Email ID</string>
    <string name="city">City</string>
    <string name="details">Details of new Operator</string>
    <string name="details_zone_manager">Details of new Zone Manager</string>
    <string name="password_tv">Enter your authorisation password to create the new operator</string>
    <string name="password_tv_zone_manager">Enter your authorisation password to create the new Zone Manager</string>
    <string name="help_one">Pressing Confirm will create the new operator and will send a confirmation Email to the given Email-ID</string>
    <string name="authorized_password">Authorization Password</string>
    <string name="confirm">Confirm</string>
    <string name="new_operator_added">New Operator Added!</string>
    <string name="new_zone_manager_added">New Zone Manager Added!</string>
    <string name="done">Done</string>
    <string name="title_text">Title Text</string>
    <string name="organisation_name">Organisation Name</string>
    <string name="email_id">Email ID</string>
    <string name="phone">Phone</string>
    <string name="choose_lock_type">Choose Lock type:</string>
    <string name="view_cart">View Cart</string>
    <string name="checkout">Checkout</string>
    <string name="in_cart_text">In Cart :</string>
    <string name="in_stock_text">In Stock :</string>
    <string name="qt_ble">QT_BLE</string>
    <string name="qt_sms">QT_SMS</string>
    <string name="nr_ble_sms">NR_BLE_SMS</string>
    <string name="qt_ble_gsm">QT_BLE_GSM</string>
    <string name="at_ble">AT_BLE</string>
    <string name="zero">0</string>
    <string name="operator_name">Operator Details</string>
    <string name="assign_lock">Assign Locks</string>
    <string name="employee_id">Employee ID</string>
    <string name="zone_manager_name_txt">Name of the Zone Manager</string>
    <string name="empty_field_message">Field cannot be left empty</string>
    <string name="sell_lock">Sell Locks</string>
    <string name="add_zone_manager">Add Zone Manager</string>
    <string name="add_area">Add Area</string>
    <string name="proceed">Proceed</string>
    <string name="add_new_area_message">
        \u2192 Admin can choose area by typing the location in the Search Bar.\n\n
        \u2192 Twelve coordinates/points should be chosen in the map to create the polygon.\n\n
        \u2192 A name of the Polygonal Area should be given.\n\n
        \u2192 Admin can proceed to the next screen by clicking OK.\n\n
        \u2192 The Time slabs should be set with the price for Rate Chart.\n\n
        \u2192 To proceed click OK Button.\n\n
        \u2192 He/She should create the Final Area by setting\n\n
            \t\t(1) Maximum Ride Time \n\n
            \t\t(2) Maximum Cycle Holding Time\n\n
            \t\t(3) Minimum Amount of Money Present in Online Wallet\n\n
            \t\t(4) Opening Hour\n\n
            \t\t(5) Closing Hour \n\n
            \t\t(6) Geo-fencing Fine\n\n
        \u2192 Admin should hit the Proceed Button to add the area to the Server.</string>
    <string name="add_area_tv">To Add New Area</string>
    <string name="select_area_description">How do you select your location ?</string>
    <string name="area">Select your area now.</string>
    <string name="area_tv">Give name to the selected area</string>
    <string name="set_name">Set Name</string>
    <string name="area_name">Area Name</string>
    <string name="maximum_ride_time">Maximum Ride Time</string>
    <string name="maximum_ride_time_exceeding_fine">Maximum Ride Time\n exceeding fine</string>
    <string name="maximum_hold_time">Maximum Hold Time</string>
    <string name="maximum_hold_time_exceeding_fine">Maximum Hold\n Time exceeding \nfine</string>
    <string name="minimum_amount_for_first_ride">Minimum Amount\n for First Ride</string>
    <string name="set_basic_value_for_rate_chart">Set Basic value for \nrate chart \n(rupees/min)</string>
    <string name="service_start_time">Service Start time</string>
    <string name="service_end_time">Service End time</string>
    <string name="service_hour_exceeding_fine">Set Service hour\n exceeding fine</string>
    <string name="geofencing_fine">Geofencing Fine</string>
    <string name="customer_support_number">Customer \nSupport number</string>
    <string name="area_legal">Add Area Legal</string>
    <string name="add_bicycle">Add Bicycle</string>
    <string name="repair_bicycle">Repair Bicycle</string>
    <string name="remove_bicycle">Remove Bicycle</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="description">Description</string>
    <string name="area_subscription">Add Area Subscription</string>
    <string name="add_station">Add Stations</string>
    <string name="add_rate_chart">Add Rate Chart</string>
    <string name="set_condition">Set conditions to your Selected Area</string>
    <string name="select_area_legal">How to add new Area Legal?</string>
    <string name="select_area_legal_subtitle">To Add Area Legal</string>
    <string name="select_area_legal_desc">
        \u2192 Set the condition to create the Virtual Geographical Boundaries for
        Step 1.\n\n\u2192 Set the Base Fare conditions (Base fare is important to start the ride)
        for Step 2.\n\n\u2192 Set the Service Condition i.e. Opening/Closing hours and other necessary conditions
        for Step 3.\n\n\u2192 Set Subscriber condition for Step 4.\n\n\u2192 Lastly add any more required conditions for area briefly in Step 5.\n\nFinally the Sub-Admin can add the Area Legal.</string>
    <string name="area_legal_bottomLine">Add new Area Legal now.</string>
    <string name="set_area_legal">Set your Area Legal</string>
    <string name="geofencing_condition">Step 1: Geofencing Conditions</string>
    <string name="baseFare_condition">Step 2: Base Fare Conditions</string>
    <string name="service_area_condition">Step 3: Service Area Conditions</string>
    <string name="area_subscription_condition">Step 4: Area subscription condition</string>
    <string name="additional_area_condition">Step 5: Additional area conditions</string>
    <string name="add_subscription">Add Subscription Plan</string>
    <string name="set_condition_subscription">Set conditions to your Subscription Plan</string>
    <string name="set_total_ride_time">Set total Ride Time</string>
    <string name="carry_forward">Do you want to make this plan as Carry Forward</string>
    <string name="add_plan">Add Plan</string>
    <string name="subscription_help">How do you set Subscription for an Area ?</string>
    <string name="subscription_help_subtitle">To set Subscription for an Area</string>
    <string name="subscription_message">
         To create subscription plan user has to add,\n\n
        (1) Amount for Subscription.\n\n
        (2) Time Period of Subscription\n\n
        (3) If unit of time gets added to user\'s ride after Subscription.\n\n
        User has to enter all four- Basic, Standard, Sweet, Premium subscription plan details and proceed further.
    </string>
    <string name="subscribe">Add subscription plans now.</string>
    <string name="add_station_">Add Station</string>
    <string name="add_station_help">How to add a station inside an area?</string>
    <string name="add_station_header">To Add a New Station</string>
    <string name="adding_station_help">
        \u2192 Admin can plot a single coordinate inside the chosen Polygonal Area.
        \n\n\u2192 A dialog will pop-up in the screen. Admin has to give a name of the station.
        \n\n\u2192 After pressing OK Button the station details will be saved in the server.</string>
    <string name="select_station">Select your station now.</string>
    <string name="area_rate_chart_header">How do you add rate chart for your selected area?</string>
    <string name="area_rate_chart_header_subtitle">To Add Rate Chart for Selected Area</string>
    <string name="description_add_rate">
        \u2192 To add a Rate Chart the Sub-Admin has to select the type of rate from the drop-down menu\n\n
        \u2192 The drop-down menu contains two options,\n\n
        (1)	TIME\n\n
        (2)	DISTANCE\n\n
        \u2192 The Sub-Admin is required to set the Time Slab in minutes and hours, with respect to price per time option. For the distance option distance should be in meters and price should be selected.\n\n
        \u2192 For the next step the Sub-Admin need to select the Type(s) of Rate he will accept as Payment, i.e. according to Time, Distance or Both from the Option Button.\n\n
        \u2192 On choosing one from the option menu, Sub-Admin can set the Basis of Rate Chart, so that the user will be charged money accordingly.</string>
    <string name="rate_now">Add Rate for the area.</string>
    <string name="set_condition_rate_chart">Set your Rate Chart</string>
    <string name="add_rate">Add Rate</string>
    <string name="area_legal_">Area Legal</string>
    <string name="area_subscription_">Area Subscription</string>
    <string name="station">Stations</string>
    <string name="rate_chart">Rate Chart</string>
    <string name="user_message_list">Report Problems</string>
    <string name="reply">REPLY</string>
    <string name="station_name">Station Name</string>
    <string name="turn_on">Turn On</string>
    <string name="cancel">Cancel</string>
    <string name="bluetooth_permission">PUBBS is asking\n to turn on Bluetooth</string>
    <string name="write_msg_zm">Write message to Zone Manager</string>
    <string name="subject">Subject</string>
    <string name="msg">Message</string>
    <string name="send">Send</string>
    <string name="login_now">Please login to the application</string>
    <string name="login_faq">Login FAQs</string>
    <string name="login_faq_one">How do an operator login to the system ?</string>
    <string name="login_faq_one_ans">Any level of administrators of Operator/Company should have a particular credential or identification number. Login credentials and password will be sent as
        an sms to the administrator to the particular phone number. Please check your inbox to get the credential details. The login credential be like : Operator Name/Admin level id/Phone Number.</string>
    <string name="login_faq_two">Who will create these credentials ?</string>
    <string name="login_faq_two_ans">Regional Manager(RM) creates and generates identification number and password for Zone Manager(ZM). Zone Manager(ZM) creates and generates identification number
    and password for Area Manager(AM) and Service Manager(SM). Please contact for your credentials to your previous higher level authority.</string>
    <string name="back_button">back button</string>
    <string name="add_button">add button</string>
    <string name="flash_button">Flash</string>
    <string name="drop_down">drop down</string>
    <string name="correct_button">Correct Button</string>
    <string name="bluetooth_icon">bluetooth icon</string>
    <string name="please_enter_city_name">enter_city_name</string>
    <string name="negative_icon">negative_icon</string>
    <string name="positive_icon">positive_icon</string>
</resources>