<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scroll_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/description_header"
                    style="@style/AppFont"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/black"
                    android:paddingStart="@dimen/sixteen_dp"
                    android:paddingTop="@dimen/sixteen_dp"
                    android:paddingBottom="@dimen/eight_dp"
                    android:text="@string/login_faq"
                    android:textColor="@color/white"
                    android:textSize="@dimen/fourteen_sp" />

                <TextView
                    android:id="@+id/description_one"
                    style="@style/AppFont"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/description_header"
                    android:paddingStart="@dimen/sixteen_dp"
                    android:paddingTop="@dimen/eight_dp"
                    android:paddingBottom="@dimen/eight_dp"
                    android:text="@string/login_faq_one"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fourteen_sp" />

                <TextView
                    android:id="@+id/description_ans"
                    style="@style/AppFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/description_one"
                    android:paddingStart="@dimen/sixteen_dp"
                    android:paddingTop="@dimen/two_dp"
                    android:paddingEnd="@dimen/sixteen_dp"
                    android:paddingBottom="@dimen/eight_dp"
                    android:text="@string/login_faq_one_ans"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fourteen_sp" />
                <TextView
                    android:id="@+id/description_two"
                    style="@style/AppFont"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/description_ans"
                    android:layout_marginTop="@dimen/sixteen_dp"
                    android:paddingStart="@dimen/sixteen_dp"
                    android:paddingTop="@dimen/eight_dp"
                    android:paddingBottom="@dimen/eight_dp"
                    android:text="@string/login_faq_two"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fourteen_sp" />

                <TextView
                    android:id="@+id/description_two_ans"
                    style="@style/AppFont"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/description_two"
                    android:paddingStart="@dimen/sixteen_dp"
                    android:paddingTop="@dimen/two_dp"
                    android:paddingEnd="@dimen/sixteen_dp"
                    android:paddingBottom="@dimen/eight_dp"
                    android:text="@string/login_faq_two_ans"
                    android:textColor="@color/black"
                    android:textSize="@dimen/fourteen_sp" />
            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/show_map"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/thirty_dp"
            app:srcCompat="@drawable/ic_expand_more"
            android:contentDescription="@string/drop_down"/>

        <TextView
            android:id="@+id/area_now"
            style="@style/AppFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/twenty_four_dp"
            android:paddingTop="@dimen/eight_dp"
            android:text="@string/login_now"
            android:textAlignment="center"
            android:textColor="@color/grey_500"
            android:textSize="@dimen/fourteen_sp" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>