<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="ContactZoneManagerActivity">

    <include layout="@layout/main_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarSize="0dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/comfortaa_regular"
                android:gravity="center"
                android:text="@string/write_msg_zm"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/rectangle_bg"
                android:fontFamily="@font/comfortaa_regular"
                android:gravity="center_vertical"
                android:hint="@string/subject"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_700"
                android:textSize="14sp"
                android:inputType="textShortMessage"/>


            <EditText
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/rectangle_bg"
                android:fontFamily="@font/comfortaa_regular"
                android:gravity="start"
                android:hint="@string/msg"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_700"
                android:textSize="14sp"
                android:inputType="textLongMessage"/>
            <Button
                android:id="@+id/send_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_four_dp"
                android:background="@drawable/round_button"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:text="@string/send"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>