<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_dialog_shape">

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/twenty_four_dp"
        android:layout_marginStart="@dimen/twenty_four_dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:text="@string/description"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:fontFamily="@font/comfortaa_regular"
        android:textSize="@dimen/fourteen_sp"/>

    <TextView
        android:id="@+id/content1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/twenty_four_dp"
        android:layout_marginStart="@dimen/twenty_four_dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:text="@string/description"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data"
        android:fontFamily="@font/comfortaa_regular"
        android:textSize="@dimen/fourteen_sp"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/twenty_four_dp"
        android:layout_marginEnd="@dimen/twenty_four_dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:padding="@dimen/eight_dp"
        app:layout_constraintTop_toBottomOf="@id/content"
        android:background="@drawable/text_field_border"
        android:textSize="@dimen/fourteen_sp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey_500"
        android:inputType="textCapWords"
        android:hint="@string/enter_new_name"/>
    <EditText
        android:id="@+id/data1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/twenty_four_dp"
        android:layout_marginEnd="@dimen/twenty_four_dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:padding="@dimen/eight_dp"
        app:layout_constraintTop_toBottomOf="@id/content1"
        android:background="@drawable/text_field_border"
        android:textSize="@dimen/fourteen_sp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey_500"
        android:inputType="textCapWords"
        android:hint="@string/enter_new_password"
        android:visibility="gone"/>


    <ImageButton
        android:id="@+id/positive"
        android:layout_width="@dimen/sixty_four_dp"
        android:layout_height="@dimen/sixty_four_dp"
        android:layout_marginBottom="@dimen/sixteen_dp"
        android:layout_marginEnd="@dimen/twenty_four_dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:background="?android:selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@+id/data1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_check_circle_black"
        android:contentDescription="@string/correct_button"/>

    <ImageButton
        android:id="@+id/negetive"
        android:layout_width="@dimen/sixty_four_dp"
        android:layout_height="@dimen/sixty_four_dp"
        android:layout_marginEnd="8dp"
        android:background="?android:selectableItemBackground"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/positive"
        app:layout_constraintEnd_toStartOf="@+id/positive"
        app:layout_constraintTop_toTopOf="@+id/positive"
        app:srcCompat="@drawable/ic_cancel_grey"
        android:contentDescription="@string/cancel"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/twenty_four_dp"
        android:layout_marginStart="@dimen/twenty_four_dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:text="@string/title_text"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/comfortaa_regular"/>

</androidx.constraintlayout.widget.ConstraintLayout>